# EGLNativeRender

app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cgfay/eglnativerender/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NativeEglController.cpp
app/src/main/cpp/cainfilter/: GLImageFilter.cpp  GLImageFilter.h  GLImageInputFilter.cpp  GLImageInputFilter.h
app/src/main/cpp/cainfilter/adjust/: GLBrightnessImageFilter.h  GLContrastImageFilter.h  GLExposureImageFilter.h  GLHueImageFilter.h  GLSaturationImageFilter.h  GLSharpnessImageFilter.h
app/src/main/cpp/cainfilter/input/: ABGRImageInputFilter.cpp  ABGRImageInputFilter.h  ARGBImageInputfilter.cpp  ARGBImageInputfilter.h  BGRImageInputfilter.cpp  BGRImageInputfilter.h  I420ImageInputFilter.cpp  I420ImageInputFilter.h  NV12ImageInputFilter.cpp  NV12ImageInputFilter.h  NV21ImageInputFilter.cpp  NV21ImageInputFilter.h  RGBImageInputFilter.cpp  RGBImageInputFilter.h
app/src/main/cpp/caingles/: EglCore.cpp  EglSurfaceBase.cpp  EglSurfaceBase.h  GlShaders.cpp  GlShaders.h  GlUtils.h
app/src/main/cpp/cainrender/: GLRender.cpp  GLRender.h  Triangle.cpp  Triangle.h
app/src/main/cpp/common/: Looper.cpp  Looper.h  MyLooper.cpp  MyLooper.h
app/src/main/java/com/cgfay/eglnativerender/: EGLRender.java  Main2Activity.java  Main3Activity.java  MainActivity.java
app/src/main/java/com/cgfay/eglnativerender/filter/: BaseImageFilter.java  DisplayFilter.java  OESInputFilter.java
app/src/main/java/com/cgfay/eglnativerender/gles/: EglCore.java  EglSurfaceBase.java  OffscreenSurface.java  WindowSurface.java
app/src/main/java/com/cgfay/eglnativerender/utils/: BitmapUtils.java  GlUtil.java  Size.java  TextureRotationUtils.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cgfay/eglnativerender/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
